apps/myspeed/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myspeed
  namespace: myspeed
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - speedtest.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: myspeed
          port: 80
